# royalhomedecor

./: .env.example  .gitignore  login.json  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: addresses.py  admin_orders.py  cart.py  collections.py  health.py  inventory.py  (+5 more)
app/core/: auth.py  config.py  exceptions.py
app/db/: base.py  dependencies.py  session.py
app/models/: __init__.py  address.py  cart.py  cart_item.py  collection.py  inventory.py  order.py  order_enums.py  order_item.py  product.py  product_image.py  product_variant.py  profile.py
app/repositories/: address.py  cart.py  collection.py  inventory.py  order.py  product.py  product_image.py  product_variant.py  profile.py
app/schemas/: address.py  auth.py  cart.py  collection.py  order.py  payment.py  product.py  profile.py
app/services/: address.py  cart.py  collection.py  dependencies.py  inventory.py  order.py  product.py  product_image.py  product_variant.py  profile.py  razorpay.py
luxury_furniture_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
migrations/versions/: 04067f5cdfac_create_collections_and_products.py  59212b9e8ceb_add_carts_and_cart_items.py  b4c54b868805_add_product_images_variants_and_.py  ccbc656459b3_add_profiles_and_addresses.py  fe94c77da7c0_add_orders_and_order_items.py
tests/: conftest.py  test_admin_orders.py  test_auth.py  test_cart.py  test_collections.py  test_health.py  test_inventory.py  test_orders.py  test_product_images.py  test_products.py  test_profiles_addresses.py
