##keeps project information, dependencies and development-tool configuration in one place.##

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "luxury-furniture-api"
version = "0.1.0"
description = "Backend API for a luxury furniture e-commerce website"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.121,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "pydantic-settings>=2.10,<3.0",
    "sqlalchemy[asyncio]>=2.0,<2.2",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.16,<2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"